--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -24,8 +24,8 @@ nav {
 nav > span { float: right; padding-right: 2%; }
 
 body { width: 87.5%;
-       margin-left: auto;
-       margin-right: auto;
+       margin-left: 0;
+       margin-right: 0;
        padding-left: 12.5%;
        font-family: ETBembo, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
        background-color: #fffff8;
