--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -47,6 +47,7 @@
 
   <body>
     <div id="wrap">
+      <section>
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -89,6 +90,7 @@
         </p>
       </div>
     </div>
+     </section>
 
     {% include JB/analytics %}
 
