--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -47,7 +47,6 @@
 
   <body>
     <div id="wrap">
-      <section>
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -76,9 +75,11 @@
         </div><!-- /.navbar-collapse -->
       </nav>
 
-      <div class="container">
+      <!-- <div class="container"> -->
+
         {{ content }}
-      </div>
+      
+      <!-- </div> -->
 
     </div>
 
@@ -90,7 +91,6 @@
         </p>
       </div>
     </div>
-     </section>
 
     {% include JB/analytics %}
 
