--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -24,6 +24,8 @@
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/tufte.css?" rel="stylesheet" type="text/css" media="all">
 
+    <link href="{{ ASSET_PATH }}/css/style.css?" rel="stylesheet" type="text/css" media="all">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
