--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -2,12 +2,40 @@
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div> -->
 
+      {% unless page.categories == empty %}
+      <ul class="tag_box inline noindent">
+        <li><i class="glyphicon glyphicon-open"></i></li>
+        {% assign categories_list = page.categories %}
+        {% include JB/categories_list %}
+      </ul>
+      {% endunless %}  
+
+      {% unless page.tags == empty %}
+      <ul class="tag_box inline noindent">
+        <li><i class="glyphicon glyphicon-tags"></i></li>
+        {% assign tags_list = page.tags %}
+        {% include JB/tags_list %}
+      </ul>
+      {% endunless %} 
+
+
 <div class="row post-full">
   <div class="col-xs-12">
-    <div class="date">
+<!--     <div class="date">
       <span>{{ page.date | date_to_long_string }}</span>
-    </div>
+    </div> -->
     <div class="content">
+
+      <h3>{{page.title}}</h3>
+      {% unless page.original_published == empty %}
+        
+        <p>
+          <span class="post_tagline">{{page.original_published}}</span>
+          <span class="post_tagline">{{page.original_date}}</span>
+        </p>
+
+      {% endunless %} 
+
       {{ content }}
     </div>
 
