--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -30,7 +30,7 @@
       {% unless page.original_published == empty %}
         
         <p>
-          <span class="post_tagline">{{page.original_published}}</span>
+          <span class="post_tagline">{{page.source}}</span>
           <span class="post_tagline">{{page.original_date}}</span>
         </p>
 
@@ -58,13 +58,13 @@
     <hr>
     <ul class="pagination">
     {% if page.previous %}
-      <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; Previous</a></li>
+      <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; {{ page.previous.title }}</a></li>
     {% else %}
       <li class="prev disabled"><a>&larr; Previous</a></li>
     {% endif %}
       <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
     {% if page.next %}
-      <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &raquo;</a></li>
+      <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">&raquo; {{ page.next.title }}</a></li>
     {% else %}
       <li class="next disabled"><a>Next &rarr;</a>
     {% endif %}
