--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -2,21 +2,6 @@
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div> -->
 
-      {% unless page.categories == empty %}
-      <ul class="tag_box inline noindent">
-        <li><i class="glyphicon glyphicon-open"></i></li>
-        {% assign categories_list = page.categories %}
-        {% include JB/categories_list %}
-      </ul>
-      {% endunless %}  
-
-      {% unless page.tags == empty %}
-      <ul class="tag_box inline noindent">
-        <li><i class="glyphicon glyphicon-tags"></i></li>
-        {% assign tags_list = page.tags %}
-        {% include JB/tags_list %}
-      </ul>
-      {% endunless %} 
 
 
 <div class="row post-full">
@@ -26,7 +11,8 @@
     </div> -->
     <div class="content">
 
-      <h3>{{page.title}}</h3>
+      <h1>{{page.title}}</h1>
+      <h3>{{page.description}}</h3>
       {% unless page.original_published == empty %}
         
         <p>
@@ -34,7 +20,19 @@
           <span class="post_tagline">{{page.original_date}}</span>
         </p>
 
+        
       {% endunless %} 
+
+        {% unless page.categories == empty %}
+    <ul class="tag_box inline">
+      <li><i class="glyphicon glyphicon-open"></i></li>
+      {% assign categories_list = page.categories %}
+      {% include JB/categories_list %}
+       <li><i class="glyphicon glyphicon-tags"></i></li>
+      {% assign tags_list = page.tags %}
+      {% include JB/tags_list %}
+    </ul>
+  {% endunless %}  
 
       {{ content }}
     </div>
@@ -44,16 +42,16 @@
       <li><i class="glyphicon glyphicon-open"></i></li>
       {% assign categories_list = page.categories %}
       {% include JB/categories_list %}
-    </ul>
-  {% endunless %}  
-
-  {% unless page.tags == empty %}
-    <ul class="tag_box inline">
-      <li><i class="glyphicon glyphicon-tags"></i></li>
+       <li><i class="glyphicon glyphicon-tags"></i></li>
       {% assign tags_list = page.tags %}
       {% include JB/tags_list %}
     </ul>
   {% endunless %}  
+
+<!--   {% unless page.tags == empty %}
+    <ul class="tag_box inline">
+     
+  {% endunless %}   -->
   
     <hr>
     <ul class="pagination">
