--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -3,36 +3,31 @@
 </div> -->
 
 
-
 <div class="row post-full">
   <div class="col-xs-12">
-<!--     <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
-    </div> -->
+<!--     <div class="date"><span>{{ page.date | date_to_long_string }}</span> </div> -->
     <div class="content">
 
       <h1>{{page.title}}</h1>
       <h3>{{page.description}}</h3>
-      {% unless page.original_published == empty %}
-        
+
+      {% unless page.source == empty %}
         <p>
           <span class="post_tagline">{{page.source}}</span>
           <span class="post_tagline">{{page.original_date}}</span>
         </p>
-
-        
       {% endunless %} 
 
-        {% unless page.categories == empty %}
-    <ul class="tag_box inline">
-      <li><i class="glyphicon glyphicon-open"></i></li>
-      {% assign categories_list = page.categories %}
-      {% include JB/categories_list %}
-       <li><i class="glyphicon glyphicon-tags"></i></li>
-      {% assign tags_list = page.tags %}
-      {% include JB/tags_list %}
-    </ul>
-  {% endunless %}  
+      {% unless page.categories == empty %}
+        <ul class="tag_box inline">
+          <li><i class="glyphicon glyphicon-open"></i></li>
+          {% assign categories_list = page.categories %}
+          {% include JB/categories_list %}
+           <li><i class="glyphicon glyphicon-tags"></i></li>
+          {% assign tags_list = page.tags %}
+          {% include JB/tags_list %}
+        </ul>
+      {% endunless %}  
 
       {{ content }}
     </div>
