--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -33,10 +33,6 @@ body { width: 87.5%;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
-
-
-
-
 h1 { font-weight: 400;
      margin-top: 2.5rem;
      margin-bottom: 1.5rem;
@@ -220,6 +216,17 @@ span.post_tagline:last-child  {
 .nomargin {
   margin: 0;
   padding: 0;
+}
+
+.index{
+  margin: 0;
+  margin-bottom: 1em;
+}
+
+.index > ul {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 20px;
 }
 
 
