--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -87,9 +87,8 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}: built with <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll</a>
+          and <a href="http://www.daveliepmann.com/tufte-css" target="_blank">Tufte CSS</a>
         </p>
       </div>
     </div>
