--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -55,6 +55,15 @@
             {{page.videotext}}
             </span>
           </p>
+
+        {% elsif (page.vimeo | size ) > 0 %}
+         <br>
+          <p class='videofull'>
+
+            <span>
+          <iframe src="https://player.vimeo.com/video/{{page.vimeo}}" width="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </span>
+          </p>
       {% endif %} 
         
       {{ content }}
