--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -280,6 +280,10 @@ img.navpic {
   text-align: center;
 }
 
+.left {
+  text-align: left;
+}
+
 .category {
 
 font-variant: small-caps;
@@ -318,6 +322,20 @@ h3.lyrics {
 
 td {
   text-align: left;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
