fixed category tags layout

--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -89,8 +89,8 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}: built with <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll</a>
-          and <a href="http://www.daveliepmann.com/tufte-css" target="_blank">Tufte CSS</a>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}: built with <a href="http://jekyllbootstrap.com"   title="The Definitive Jekyll Blogging Framework">Jekyll</a>
+          and <a href="http://www.daveliepmann.com/tufte-css"  >Tufte CSS</a>
         </p>
       </div>
     </div>
