--- a/_includes/themes/tufte/music.html
+++ b/_includes/themes/tufte/music.html
@@ -42,6 +42,14 @@
           <iframe width="100%" height="350" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/{{page.soundcloud}}&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;"></iframe>
         {% endif %}
 
+         {% if {{page.soundcloud-tracks}} %}
+         <br>
+         <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{page.soundcloud-tracks}}&color=33cccc"></iframe>
+        {% endif %}
+
+
+        
+
          {% if (page.video | size) > 0 %}
           <p class='videofull'>
             <div class="videoWrapper">
