--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -326,7 +326,7 @@ td {
 
 .videoWrapper {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 30%; /* 16:9 */
   padding-top: 25px;
   height: 0;
 }
@@ -338,10 +338,67 @@ td {
   height: 100%;
 }
 
+.parent {
+  width: 100%;
+  min-height: 150px;
+  clear: both;
+}
+.main  {
+  min-width: 60%;
+  float: left;
+  padding: 0;
+  margin: 0;
+  word-wrap: wrap;
+}
+
+.main-image  {
+  float: right; 
+  position: relative;
+  vertical-align: middle;
+  padding: 0;
+  margin: 0;
+}
+
+
 .buffer {
   margin-top: 5px;
 }
 
+.right {
+  float: right;
+}
+
+p.full {
+  width: 100%; 
+  margin: 0;
+}
+
+.left.tags {
+  clear: left;
+}
+
+.clear {
+  clear: both;
+  padding-top: 10px;
+}
+
+ul.icon {
+    list-style-type: none;
+}
+
+.iconic {
+  background-repeat: no-repeat;
+    background-position: 0px center; 
+    background-size: 20px 20px; 
+    padding-left: 25px; 
+}
 
 
+
+.journalismlink {background-image: url("../images/icon-journalism.png");}
+.diarylink {background-image: url("../images/icon-diary.png");}
+.cvlink {background-image: url("../images/icon-cv.png");}
+.radiolink {background-image: url("../images/icon-radio.png");}
+.techlink {background-image: url("../images/icon-tech.png");}
+.musiclink {background-image: url("../images/icon-music.png");}
 
