--- a/_includes/themes/tufte/post.html
+++ b/_includes/themes/tufte/post.html
@@ -32,7 +32,7 @@
           {% endunless %} 
 
           {% unless page.categories == empty %}
-            <ul class="tag_box inline">
+            <ul class="tag_box inline clear">
               <li><i class="glyphicon glyphicon-open"></i></li>
               {% assign categories_list = page.categories %}
               {% include JB/categories_list %}
@@ -40,6 +40,7 @@
               {% assign tags_list = page.tags %}
               {% include JB/tags_list %}
             </ul>
+            <br>
           {% endunless %}  
         {% endunless %} 
 
@@ -65,6 +66,7 @@
             </span>
           </p>
       {% endif %} 
+      <br>
         
       {{ content }}
     </div>
@@ -72,7 +74,7 @@
     {% unless page.categories contains 'music' %}
 
       {% unless page.categories == empty %}
-        <ul class="tag_box inline">
+        <ul class="tag_box inline clear">
           <li><i class="glyphicon glyphicon-open"></i></li>
           {% assign categories_list = page.categories %}
           {% include JB/categories_list %}
@@ -83,7 +85,7 @@
       {% endunless %}  
 
       {% unless page.tags == empty %}
-        <ul class="tag_box inline">
+        <ul class="tag_box inline clear">
          
       {% endunless %}  
       
