--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -402,3 +402,22 @@ ul.icon {
 .techlink {background-image: url("../images/icon-tech.png");}
 .musiclink {background-image: url("../images/icon-music.png");}
 
+.larger {
+  position: absolute;
+  background-color: white;
+  z-index: 5;
+  transform:scale(2,2);
+  transform-origin: 50% 0;
+  border: 5px solid white;
+}
+
+.largermain {
+  position: absolute;
+  background-color: white;
+  z-index: 5;
+  transform:scale(1.3,1.3);
+  transform-origin: 10% 0;
+  border: 5px solid white;
+}
+
+
