--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -64,8 +64,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img class='navpic' src='{{base}}/assets/themes/tufte/images/LL.jpg' height='50' />
-          <a class="navbar-brand" href="{{ HOME_PATH }}"></a>
+          <a class="navbar-brand" href="{{ HOME_PATH }}">
+            <img class='navpic' src='{{base}}/assets/themes/tufte/images/LL.jpg' height='50' />
+          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
