--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -6,6 +6,7 @@
 
     <title>{{ page.title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+    {% if page.tags %}<meta name="tags" content="{{ page.tags | join: ' ' }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
     <!-- Enable responsive viewport -->
