--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -66,7 +66,11 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ HOME_PATH }}">
-            <img class='navpic' src='{{base}}/assets/themes/tufte/images/LL.jpg' height='50' />
+            {% if page.icon %}
+              <img class='navpic' src='{{base}}/assets/themes/tufte/images/{{page.icon}}' height='50' width='50' />
+            {% else %}
+             <img class='navpic' src='{{base}}/assets/themes/tufte/images/LL.jpg' height='50' />
+             {% endif %}
           </a>
         </div>
 
