added lyric to music page, improved index layout

--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -68,7 +68,7 @@
   <body>
    
 
-    <div id="wrap">
+    <div id="stickywrap">
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -112,13 +112,7 @@
 
     </div>
 
-    <!--    <div id="footer">
-      <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}: built with <a href="http://jekyllbootstrap.com"   title="The Definitive Jekyll Blogging Framework">Jekyll</a>
-          and <a href="http://www.daveliepmann.com/tufte-css"  >Tufte CSS</a>
-        </p>
-      </div>
-    </div> -->
+    <!-- {% include footerform %} -->
 
     {% include JB/analytics %}
 
