--- a/_includes/themes/tufte/lyrics.html
+++ b/_includes/themes/tufte/lyrics.html
@@ -153,7 +153,7 @@
 
       {% if title == page.title %}
       <li class="previous"><a href="{{urls[previndex]}}" title="{{ previous}}">&laquo; {{ previous}}</a></li>
-      <li><a href="/lyrics.html">Lyrics</a></li>
+      <li><a href="/posts/music/2015-10-10-lyrics.html">Song Lyrics</a></li>
    
        <li class="next"><a href="{{urls[nextindex]}}" title="{{next}}">&raquo; {{ next}}</a></li>
       {% endif %}
