--- a/assets/themes/tufte/css/style.css
+++ b/assets/themes/tufte/css/style.css
@@ -110,6 +110,19 @@ ul li {
   font-size: 16px;
 }
 
+/*ul li a {
+  text-decoration: none;
+}*/
+
+ul li a.bigger {
+  font-size: 1.3em;
+  border-bottom: 1px #cccccc solid;
+}
+
+ul li a.smaller {
+  font-size: 1em;
+}
+
 .allindextags {
   float: left;
 }
