--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -92,7 +92,7 @@
           <ul class="nav navbar-nav">
             {% assign pages_list = (site.pages | sort:"weight" )%}
             {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+            {% include JB/pages_list_nav %}
             <li><a href="rss.xml">RSS</a> </li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
