--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -19,9 +19,23 @@ nav {
   position: fixed;
   line-height: 2;
   vertical-align: middle;
+  
 }
 
-nav > span { float: right; padding-right: 2%; }
+div.collapse.navbar-collapse {
+  box-sizing: none;
+}
+
+nav > span { float: right; padding-right: 2%; line-height: normal; }
+
+ul.nav {
+  float: left;
+  display: inline;
+}
+
+a.navbar-brand {
+  display: inline;
+}
 
 body { width: 90%;
        margin-left: 0;
@@ -46,7 +60,7 @@ h2 { font-style: italic;
      font-size: 2.2rem;
      line-height: 1; }
 
-h2.index {
+h2.indexpage {
   font-style: normal;
   font-size: 2.6rem;
 } 
@@ -267,6 +281,7 @@ span.all_page_main {
 img.navpic {
   border-radius: 25px;
   float: left;
+  margin-top: -25px;
 }
 
 .videoleft {
@@ -475,9 +490,7 @@ ul.icon {
 /*svg {transform:scale(1.2,1.2);
   transform-origin: 20% 20%;}*/
 
-.RSS{background-image: url("../images/rss.jpeg");
-
-}
+.RSS{background-image: url("../images/rss.jpeg");}
 
 ol > li {
   font-size: 16px;
@@ -523,3 +536,58 @@ li.nolink a:hover {
   padding: 10px 0 10px 0;
   margin: 10px 0 10px 0;
 }
+
+.techfooter {
+  background-color: white;
+}
+
+.nav_additional_class {
+  vertical-align: middle;
+}
+
+.index-table {
+  text-align: centre;
+  /*border-top: 2px solid #777;*/
+  margin-top: 20px;
+  /*border-bottom: 2px solid #777;*/
+  min-width: 100%;
+  display: table;
+}
+
+.index-row {
+  min-width: 100%;
+  text-align: center;
+  display: table-row;
+}
+
+.index-item {
+  font-size: 1.2em;
+  display: table-cell;
+  width: 60px;
+}
+
+div.index-item > a {
+  text-decoration: none;
+}
+
+.index-number{
+  font-size: 2em;
+  border-style: solid;
+  border-color: transparent;
+  border-width:10px; 
+  border-radius:100%;
+  
+
+}
+
+.index-overall{background-color: rgba(215, 40, 40, 0.2)}
+.index-music{background-color: rgba(215, 60, 60, 0.2)}
+.index-print{background-color: rgba(215, 80, 80, 0.2)}
+.index-tech{background-color: rgba(215, 100, 100, 0.2)}
+.index-blog{background-color: rgba(215, 120, 120, 0.2)}
+.index-radio{background-color: rgba(215, 140, 140, 0.2)}
+.index-tv{background-color: rgba(215, 160, 160, 0.2)}
+.index-reviews{background-color: rgba(215, 180, 180, 0.2)}
+
+
+
