--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -597,7 +597,8 @@ div.index-item > a {
 
 .right {float: right;}
 
-.footer {display: inline;text-align: center;width: 100%;margin-top: 10px; border-top: 2px solid #777;font-style: italic;}
+.footer-up, .footer-down {display: inline;text-align: center;width: 100%;margin-top: 10px; font-style: italic;}
+.footer-up {border-top: 2px solid #777;}
 .full {
   width: 100%;
   height: 80%;
