--- a/assets/themes/tufte/css/tufte.css
+++ b/assets/themes/tufte/css/tufte.css
@@ -7,6 +7,17 @@
 
 html { font-size: 11px; }
 
+*, *:before, *:after {
+  /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
+  -webkit-box-sizing: border-box; 
+
+  /* Firefox (desktop or Android) 28- */
+  -moz-box-sizing: border-box;
+
+  /* Firefox 29+, IE 8+, Chrome 10+, Safari 5.1+, Opera 9.5+, iOS 5+, Opera Mini Anything, Blackberry 10+, Android 4+ */
+  box-sizing: border-box;
+}
+
 @media screen and (min-width: 800px)  { html { font-size: 12px; }}
 @media screen and (min-width: 900px)  { html { font-size: 13px; }}
 @media screen and (min-width: 1000px) { html { font-size: 14px; }}
@@ -569,7 +580,7 @@ div.index-item > a {
   border-color: transparent;
   border-width:10px; 
   border-radius:100%;
-  background-color: rgba(215, 140, 140, 0.2)
+  background-color: rgba(215, 140, 140, 0.1);
 }
 
 .index-overall{background-color: rgba(215, 40, 40, 0.3)}
@@ -703,4 +714,24 @@ h1.tagpageh1 {
 
 div.tagpage-view {
     display: block;
+}
+
+.indented {
+  margin-left: 10%;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active> a:hover, .navbar-default .navbar-nav>.active>a:focus {
+  background-color: rgba(215, 140, 140, 0.1);
+}
+
+img.allnote{
+  border-radius: 5px;
+}
+
+img.allnote.first {
+  margin-top: 0;
+}
+
+.indexlink {
+
 }
