--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -4,6 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="fb:app_id"       content="1537545299907468" />
 
     {% if page.description %}
       <meta name="description" content="{{ page.description }}">
