--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -108,9 +108,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
-            {% assign pages_list = (site.pages | sort:"weight" )%}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list_nav %}
+            <li><a href="/blog.html">Blog</a></li>
+            <li><a href="/music.html">Music</a></li>
+            <li><a href="/writing.html">Media</a></li>
+            <li><a href="/tech.html">Tech</a></li>
+            <li><a href="/world.html">World</a></li>
+            <li><a href="/categories.html">Tags</a></li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
