fixing broken nav links by hardcoding v3.2

--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -116,6 +116,7 @@
           <li><a href='/tech.html' {% if current[1] == 'tech.html' or current[1] == 'tech' %}class='active'{% endif %}>Tech</a></li>
           <li><a href='/world.html' {% if current[1] == 'world.html' or current[1] == 'world' %}class='active'{% endif %}>World</a></li>
           <li><a href='/categories.html' {% if current[1] == 'categories.html' or current[1] == 'categories' %}class='active'{% endif %}>Tags</a></li>
+          <li>{{current}}</li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
