--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -110,12 +110,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
-           <li><a href='/blog.html' {% if current == 'blog.html' or current == 'blog' %}class='active'{% endif %}>Blog</a></li>
-          <li><a href='/music.html' {% if current == 'music.html' or current == 'music' %}class='active'{% endif %}>Music</a></li>
-          <li><a href='/writing.html' {% if current == 'writing.html' or current == 'writing' %}class='active'{% endif %}>Media</a></li>
-          <li><a href='/tech.html' {% if current == 'tech.html' or current == 'tech' %}class='active'{% endif %}>Tech</a></li>
-          <li><a href='/world.html' {% if current == 'world.html' or current == 'world' %}class='active'{% endif %}>World</a></li>
-          <li><a href='/categories.html' {% if current == 'categories.html' or current == 'categories' %}class='active'{% endif %}>Tags</a></li>
+           <li><a href='/blog.html' {% if current == '/blog.html' or current == '/blog' %}class='active'{% endif %}>Blog</a></li>
+          <li><a href='/music.html' {% if current == '/music.html' or current == '//music' %}class='active'{% endif %}>Music</a></li>
+          <li><a href='/writing.html' {% if current == '/writing.html' or current == 'writing' %}class='active'{% endif %}>Media</a></li>
+          <li><a href='/tech.html' {% if current == '//tech.html' or current == 'tech' %}class='active'{% endif %}>Tech</a></li>
+          <li><a href='/world.html' {% if current == '/world.html' or current == '/world' %}class='active'{% endif %}>World</a></li>
+          <li><a href='/categories.html' {% if current == '/categories.html' or current == '/categories' %}class='active'{% endif %}>Tags</a></li>
           <li>{{current}}</li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
