fixing broken nav links by hardcoding v3.5

--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -111,9 +111,9 @@
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
            <li {% if current == '/blog.html' or current == '/blog' %}class='active'{% endif %}><a href='/blog.html' >Blog</a></li>
-          <li {% if current == '/music.html' or current == '//music' %}class='active'{% endif %}><a href='/music.html' >Music</a></li>
-          <li {% if current == '/writing.html' or current == 'writing' %}class='active'{% endif %}><a href='/writing.html' >Media</a></li>
-          <li {% if current == '//tech.html' or current == 'tech' %}class='active'{% endif %}><a href='/tech.html' >Tech</a></li>
+          <li {% if current == '/music.html' or current == '/music' %}class='active'{% endif %}><a href='/music.html' >Music</a></li>
+          <li {% if current == '/writing.html' or current == '/writing' %}class='active'{% endif %}><a href='/writing.html' >Media</a></li>
+          <li {% if current == '/tech.html' or current == '/tech' %}class='active'{% endif %}><a href='/tech.html' >Tech</a></li>
           <li {% if current == '/world.html' or current == '/world' %}class='active'{% endif %}><a href='/world.html' >World</a></li>
           <li {% if current == '/categories.html' or current == '/categories' %}><a href='/categories.html' class='active'{% endif %}>Tags</a></li>
           </ul>
