fixing broken nav links by hardcoding v3.6

--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -115,7 +115,7 @@
           <li {% if current == '/writing.html' or current == '/writing' %}class='active'{% endif %}><a href='/writing.html' >Media</a></li>
           <li {% if current == '/tech.html' or current == '/tech' %}class='active'{% endif %}><a href='/tech.html' >Tech</a></li>
           <li {% if current == '/world.html' or current == '/world' %}class='active'{% endif %}><a href='/world.html' >World</a></li>
-          <li {% if current == '/categories.html' or current == '/categories' %}><a href='/categories.html' class='active'{% endif %}>Tags</a></li>
+          <li {% if current == '/categories.html' or current == '/categories' %}class='active'{% endif %}><a href='/categories.html' >Tags</a></li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
