--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -7,15 +7,17 @@
     <meta property="fb:app_id"       content="1537545299907468" />
 
     {% if page.description %}
-      <meta name="description" content="{{ page.description }}">
+    <meta name="description" content="{{ page.description }}">
+    {% else %}
+    <meta name="description" content="{{ site.description }}">
     {% endif %}
 
     {% if page.image %}
-      <meta property="og:image" content="{{site.production_url}}/{{ IMAGE_PATH}}/{{page.image}}" />
+    <meta property="og:image" content="{{site.production_url}}/{{ IMAGE_PATH}}/{{page.image}}" />
     {% endif %}
 
     {% if page.tags %}
-      <meta name="tags" content="{{ page.tags | join: ' ' }}">
+     <meta name="tags" content="{{ page.tags | join: ' ' }}">
     {% endif %}
     
     <meta name="author" content="{{ site.author.name }}">
