--- a/_includes/themes/tufte/default.html
+++ b/_includes/themes/tufte/default.html
@@ -122,6 +122,7 @@
           <li {% if current == '/tech.html' or current == '/tech' %}class='active'{% endif %}><a href='/tech.html' >Tech</a></li>
           <li {% if current == '/world.html' or current == '/world' %}class='active'{% endif %}><a href='/world.html' >World</a></li>
           <li {% if current == '/categories.html' or current == '/categories' %} class='active'{% endif %}><a href='/categories.html' >Tags</a></li>
+          <li {% if current == '/contact.html' or current == '/contact' %} class='active'{% endif %}><a href='/contact.html' >Contact</a></li>
           </ul>
        <!--    <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
